[gd_scene load_steps=19 format=2]

[ext_resource path="res://Header.tscn" type="PackedScene" id=2]
[ext_resource path="res://Crab.tscn" type="PackedScene" id=4]
[ext_resource path="res://Target.tscn" type="PackedScene" id=11]
[ext_resource path="res://Game.gd" type="Script" id=12]
[ext_resource path="res://BgLeaf.tscn" type="PackedScene" id=13]
[ext_resource path="res://Bg.tscn" type="PackedScene" id=15]
[ext_resource path="res://PopupScreen.tscn" type="PackedScene" id=16]
[ext_resource path="res://Pointer.tscn" type="PackedScene" id=17]
[ext_resource path="res://BulletSet.tscn" type="PackedScene" id=18]
[ext_resource path="res://HurtScreen.tscn" type="PackedScene" id=19]
[ext_resource path="res://FLowBg.tscn" type="PackedScene" id=20]
[ext_resource path="res://LifesSet.tscn" type="PackedScene" id=21]
[ext_resource path="res://bg_gradient.tres" type="Texture" id=22]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.002849 )
colors = PoolColorArray( 1, 1, 1, 0.415686 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )
width = 1500

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.129231, 0.649573 )
colors = PoolColorArray( 1, 1, 1, 0.584314, 1, 1, 1, 0.368627, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )
width = 1024

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 312.5, 123 )

[node name="Game" type="Node2D"]
script = ExtResource( 12 )

[node name="Crab" parent="." instance=ExtResource( 4 )]

[node name="Bg" parent="." instance=ExtResource( 15 )]
texture = ExtResource( 22 )

[node name="FLowBg" parent="." instance=ExtResource( 20 )]

[node name="FlowC" type="Node2D" parent="."]
position = Vector2( 45, 0 )

[node name="BgLeaf" parent="." instance=ExtResource( 13 )]

[node name="BottomC" type="Node2D" parent="."]
position = Vector2( 0, 645 )

[node name="BootomTop" type="Sprite" parent="BottomC"]
position = Vector2( 331, 0 )
texture = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bottom" type="Sprite" parent="BottomC/BootomTop"]
self_modulate = Color( 1, 1, 1, 0.576471 )
position = Vector2( 0.0186667, 256 )
rotation = 1.5708
scale = Vector2( 0.5, 1500 )
texture = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="BottomC"]
position = Vector2( -4, 80 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomC/Area2D"]
position = Vector2( 302.5, 113 )
shape = SubResource( 8 )

[node name="Header" parent="." instance=ExtResource( 2 )]

[node name="BulletSet" parent="." instance=ExtResource( 18 )]
position = Vector2( 37, 180 )

[node name="LifesSet" parent="." instance=ExtResource( 21 )]

[node name="BulletHoleC" type="Node2D" parent="."]

[node name="ShotScoreC" type="Node2D" parent="."]

[node name="HurtScreen" parent="." instance=ExtResource( 19 )]

[node name="PopupScreen" parent="." instance=ExtResource( 16 )]
visible = false

[node name="Target" parent="." instance=ExtResource( 11 )]

[node name="Pointer" parent="." instance=ExtResource( 17 )]
visible = false
